// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / DataToggle  Augmented Width Data Toggle 1`] = `
.c0 {
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: #FFFFFF;
}

.c21 {
  padding-left: 4px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c6 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #336BFF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  display: inline-block;
}

.c15 {
  height: 24px;
  width: 96px;
  border-radius: 24px;
  box-sizing: border-box;
  -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.6s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.6s cubic-bezier(0.18,0.9,0.35,1.15);
  background-color: #FFFFFF;
  box-shadow: 0px 2px 2px rgba(0,0,0,0.03);
}

.c12 {
  display: block;
  position: relative;
  height: 24px;
  width: 192px;
  padding: 2px;
  border-radius: 24px;
  line-height: 24px;
  background-color: #F5F5F5;
}

.c17 {
  position: absolute;
  z-index: 2;
  top: 0;
  height: 28px;
}

.c10 {
  position: relative;
}

.c9 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c9[aria-checked='true'] .c14 {
  -webkit-transform: translate( 96px );
  -ms-transform: translate( 96px );
  transform: translate( 96px );
}

.c9[disabled] .c11,
.c9[aria-readonly] .c11 {
  background-color: #EBEBE8;
}

.c9[disabled] .c14,
.c9[aria-readonly] .c14 {
  background-color: #EEEEEE;
}

.c9[aria-checked='true'][aria-readonly] .c11 {
  background-color: #D6E1FF;
}

.c19 {
  padding-top: 1px;
  width: 96px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label
        className="c3"
      >
        <span
          className="c4"
        >
          <span
            className="c5"
          >
            <div
              className="c6"
            >
              <span
                className="Typography__Span-sc-10mju41-0 c7"
              >
                language toggle
              </span>
            </div>
          </span>
          <span
            className="c5"
          >
            <button
              aria-checked={false}
              className="c8 c9"
              knobwidth={24}
              onClick={[Function]}
              role="switch"
              type="button"
              width={48}
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                  width={48}
                >
                  <div
                    className="c13 c14 c15"
                    knobwidth={24}
                  />
                  <div
                    className="c16 c17"
                  >
                    <span
                      className="Typography__Span-sc-10mju41-0 c18 c19"
                    >
                      Swedish
                    </span>
                    <span
                      className="Typography__Span-sc-10mju41-0 c20 c19"
                    >
                      Finnish
                    </span>
                  </div>
                </span>
              </div>
            </button>
          </span>
        </span>
      </label>
    </div>
    <div
      className="c2"
    >
      <div
        className="c21"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c22"
        >
          Active: 
          Swedish
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / DataToggle  Default  Data Toggle 1`] = `
.c0 {
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: #FFFFFF;
}

.c21 {
  padding-left: 4px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c6 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #336BFF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  display: inline-block;
}

.c15 {
  height: 24px;
  width: 43px;
  border-radius: 24px;
  box-sizing: border-box;
  -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.6s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.6s cubic-bezier(0.18,0.9,0.35,1.15);
  background-color: #FFFFFF;
  box-shadow: 0px 2px 2px rgba(0,0,0,0.03);
}

.c12 {
  display: block;
  position: relative;
  height: 24px;
  width: 86px;
  padding: 2px;
  border-radius: 24px;
  line-height: 24px;
  background-color: #F5F5F5;
}

.c17 {
  position: absolute;
  z-index: 2;
  top: 0;
  height: 28px;
}

.c10 {
  position: relative;
}

.c9 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c9[aria-checked='true'] .c14 {
  -webkit-transform: translate( 43px );
  -ms-transform: translate( 43px );
  transform: translate( 43px );
}

.c9[disabled] .c11,
.c9[aria-readonly] .c11 {
  background-color: #EBEBE8;
}

.c9[disabled] .c14,
.c9[aria-readonly] .c14 {
  background-color: #EEEEEE;
}

.c9[aria-checked='true'][aria-readonly] .c11 {
  background-color: #D6E1FF;
}

.c19 {
  padding-top: 1px;
  width: 43px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label
        className="c3"
      >
        <span
          className="c4"
        >
          <span
            className="c5"
          >
            <div
              className="c6"
            >
              <span
                className="Typography__Span-sc-10mju41-0 c7"
              >
                finance toggle
              </span>
            </div>
          </span>
          <span
            className="c5"
          >
            <button
              aria-checked={false}
              className="c8 c9"
              knobwidth={10.75}
              onClick={[Function]}
              role="switch"
              type="button"
            >
              <div
                className="c10"
              >
                <span
                  className="c11 c12"
                >
                  <div
                    className="c13 c14 c15"
                    knobwidth={10.75}
                  />
                  <div
                    className="c16 c17"
                  >
                    <span
                      className="Typography__Span-sc-10mju41-0 c18 c19"
                    >
                      SEK
                    </span>
                    <span
                      className="Typography__Span-sc-10mju41-0 c20 c19"
                    >
                      %
                    </span>
                  </div>
                </span>
              </div>
            </button>
          </span>
        </span>
      </label>
    </div>
    <div
      className="c2"
    >
      <div
        className="c21"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c22"
        >
          Active: 
          SEK
        </span>
      </div>
    </div>
  </div>
</div>
`;
